# fake_news

./: .gitignore  Model explanation.html  Model explanation.ipynb  README.md  data explore.ipynb  headline model.ipynb  pyproject.toml
fake_news/: fake_news_predictor.py
fake_news/models/: logreg.json  logreg.pk  logreg_titles.json  logreg_titles.pk  tfidf.pk  tfidf_titles.pk
tests/: test_fake_news.py
