[tool.poetry]
name = "fake-news"
version = "0.1.0"
description = ""
authors = ["jonny <jonny@insurami.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.4"
jupyter = "^1.0.0"
xgboost = "^1.2.1"
matplotlib = "^3.3.3"
scikit-learn = "^0.23.2"
optuna = "^2.3.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
